# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  ppm.cpp  ray.h  vec3.h
src/: main.cpp
